--- a/src/styles.css
+++ b/src/styles.css
@@ -1,45 +1,239 @@
-.navbar{
-    padding: 10px;
-}
-.left_data{
-    padding: 38px;
-    
-}
-.login_btn{
-    background-color:rgba(126,86,218,255);
-}
-.login_btn:hover{
-    background-color:rgba(126,86,218,255);
-    opacity: 0.9;
-}
-.login_img{
-    position: relative;
-    background-image:url(/src/img/Soothing-nature-backgrounds-2-1024x684.jpg);
-    background-color: #322a44;
-    background-blend-mode: multiply;
-    height: 110vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.login_img_data{
-    position: absolute; 
-  top: 50%; 
-  left: 40%;
-  transform: translate(-50%, -50%);
-   
-}
-.login_img_data h1{
-    font-size: 45px;
-    line-height: 1.2;
-    margin-bottom: 20px;
+.navbar {
+  padding: 10px 30px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.error-message{
-    color: red;
-    margin-top: 10px;
+.search_form {
+  margin: auto;
+  display: flex;
+  width: 40%;
+  align-items: center;
+  /* Center items vertically */
+}
+
+.search_bar {
+  display: flex;
+  width: 150%;
+
+}
+
+.search_bar input[type="text"] {
+  flex: 1;
+  padding: 0px 20px;
+  border: 1px solid rgb(161, 160, 160);
+  border-radius: 20px 0 0 20px;
+  font-size: 20px;
+  background-color: #525151;
+  color: #ffffff;
+
+
+}
+
+.search_bar input[type="text"]::placeholder {
+  color: white;
+}
+
+.icon {
+  /* flex: 0 0 auto; */
+  padding: 4px 20px;
+  background-color: #525151;
+  align-items: center;
+  /* font-size: 50px; */
+  text-align: center;
+  border: 1px solid rgb(161, 160, 160);
+  border-radius: 0 20px 20px 0;
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.logout_btn {
+  padding: 5px 30px;
+  border: #322a44;
+  border-radius: 5px;
+}
+
+.left_data {
+  padding: 38px;
+
+}
+
+.login_btn {
+  background-color: rgba(126, 86, 218, 255);
+}
+
+.login_btn:hover {
+  background-color: rgba(126, 86, 218, 255);
+  opacity: 0.9;
+}
+
+.login_img {
+  position: relative;
+  background-image: url(/src/img/Soothing-nature-backgrounds-2-1024x684.jpg);
+  background-color: #322a44;
+  background-blend-mode: multiply;
+  min-height: 100vh;
+  height: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+.login_img_data {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+
+}
+
+.login_img_data h1 {
+  font-size: 45px;
+  line-height: 1.2;
+  margin-bottom: 20px;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+
+
+.main {
+  background-image: url(/src/img/338765.webp);
+  background-color: #322a44;
+  background-blend-mode: multiply;
+  /* min-height: vh; */
+  height: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+}
+
+.App {
+  text-align: center;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 45px;
+}
+
+.star {
+  font-size: 40px;
+}
+
+.magic_button {
+  margin: 20px;
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #ccc;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 50px;
+}
+
+.quote-container {
+  width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.quote-container h4 {
+  font-size: 20px;
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.quote-container p {
+  font-style: italic;
+
+
+
+}
+
+.dash_right_data {
+  width: 100%;
+  padding: 20px;
+  background-image: url(/src/img/pexels-pixabay-235985.jpg);
+  background-color: #4d4444;
+  background-blend-mode: multiply;
+  min-height: 100vh;
+  height: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.dash_right_data h1 {
+  text-align: center;
+  font-size: 45px;
+  margin-bottom: 50px;
+}
+
+.dash_right_data h3 {
+  margin-bottom: 20px;
+
+}
+
+hr {
+  width: 70%;
+  margin: 20px auto;
+  margin-bottom: 50px;
+
+
+}
+
+.form-control {
+  width: 80%;
+}
+
+.dash_right_data input {
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.dash_right_data button {
+  padding: 5px 10px;
+}
+
+.dash_right_data ul {
+  padding: 20px;
+}
+
+.dash_right_data li {
+  margin-bottom: 5px;
+  opacity: 0;
+  animation-name: fadeIn;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.error-message {
+  color: red;
 }
